# splax

./: README.md  pyproject.toml  test.py  train.py
examples/: train_image.py  train_scene.py
examples/experimental/: nlls_test.py
scripts/: rasterize.py  train.py  train_image.py  train_scene.py
src/splax/: __init__.py  _camera.py  _extras.py  _gaussian_splat.py  _rasterize_warp.py  _rasterizer.py  _select_hit_gs.py  _utils.py
