[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splax"
version = "0.0.0"
description = "Gaussian Splatting with JAX"
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []
